--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -2196,7 +2196,7 @@ stats_views &#61; round.&#40;Int64, stats_views&#41;</code></pre> </div></div>
       <div class="col-lg- mx-auto">
         <h2>Boolean Indexing</h2></p>
 <p>Let&#39;s now characterize Johnny&#39;s viral videos, focusing in particular on the number of views and money generated from these videos. To classify a video as viral, we&#39;ll employ a threshold of 100k views.</p>
-<p>The subset of viral videos can be obtained by using Boolean indexing, given by a vector with <code>true</code> for viral videos and <code>false</code> otherwise. Once the Boolean vector is created, we can use it for subsetting other variables we&#39;re interested in. </p>
+<p>The subset of viral videos can be obtained by using Boolean indexing, with <code>true</code> for viral videos and <code>false</code> otherwise. Once the Boolean vector is created, we can use it for subsetting other variables we&#39;re interested in. </p>
 <p>For instance, below we combine this approach with the function <code>sum</code> to obtain stats. The goal is to obtain the number of viral videos, along with the total views and money made from them.</p>
  <div class=" code_box"> <details  open><summary> Viral Videos  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia"># characterization of viral videos
 viral_threshold &#61; 100
@@ -2250,8 +2250,8 @@ end
 
 viral_threshold &#61; 100
 is_viral        &#61; &#40;views_per_video .&gt;&#61; viral_threshold&#41;
-viral           &#61; stats_subset&#40;views_per_video, money_per_video, is_viral&#41;</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 2.23765e6)</code></pre> </div></p>
+viral           &#61; stats_subset&#40;views_per_video, money_per_view, is_viral&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 5732.5)</code></pre> </div></p>
 <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral.nrvideos</code> <br/> <pre><code class="plaintext code-output">5</code></pre> </div>
 <p><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral.views</code> <br/> <pre><code class="plaintext code-output">1245.28</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
@@ -2268,8 +2268,8 @@ end
 
 viral_threshold &#61; 100
 is_viral        &#61; &#40;views_per_video .&gt;&#61; viral_threshold&#41;
-viral           &#61; stats_subset&#40;views_per_video, money_per_video, is_viral&#41;</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 2.23765e6)</code></pre> </div></p>
+viral           &#61; stats_subset&#40;views_per_video, money_per_view, is_viral&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 5732.5)</code></pre> </div></p>
 <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral.nrvideos</code> <br/> <pre><code class="plaintext code-output">5</code></pre> </div>
 <p><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral.views</code> <br/> <pre><code class="plaintext code-output">1245.28</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
@@ -2286,8 +2286,8 @@ end
 
 viral_threshold &#61; 100
 is_viral        &#61; &#40;views_per_video .&gt;&#61; viral_threshold&#41;
-viral           &#61; stats_subset&#40;views_per_video, money_per_video, is_viral&#41;</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 2.23765e6)</code></pre> </div></p>
+viral           &#61; stats_subset&#40;views_per_video, money_per_view, is_viral&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 5732.5)</code></pre> </div></p>
 <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral.nrvideos</code> <br/> <pre><code class="plaintext code-output">5</code></pre> </div>
 <p><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral.views</code> <br/> <pre><code class="plaintext code-output">1245.28</code></pre> </div></div> </div> 
  </div></div>
@@ -2304,18 +2304,18 @@ end
 #for virals
 viral_threshold  &#61; 100
 is_viral         &#61; &#40;views_per_video .&gt;&#61; viral_threshold&#41;
-viral            &#61; stats_subset&#40;views_per_video, money_per_video, is_viral&#41;
+viral            &#61; stats_subset&#40;views_per_video, money_per_view, is_viral&#41;
 
 #for non-virals
 is_notviral      &#61; .&#33;&#40;is_viral&#41;      # &#39;&#33;&#39; is negating a boolean value, which we then broadcast
-notviral         &#61; stats_subset&#40;views_per_video, money_per_video, is_notviral&#41;
+notviral         &#61; stats_subset&#40;views_per_video, money_per_view, is_notviral&#41;
 
 # videos created in the first 15 days of the month
 days_to_consider &#61; 1:15
 is_firstdays     &#61; in.&#40;eachindex&#40;views_per_video&#41;, Ref&#40;days_to_consider&#41;&#41;
-firstdays        &#61; stats_subset&#40;views_per_video, money_per_video, is_firstdays&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 2.23765e6)</code></pre> </div></p>
-<div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>notviral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 25, views = 1152.77, money = 2.18901e5)</code></pre> </div>
-<p><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>firstdays</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 15, views = 954.394, money = 2.43538e5)</code></pre> </div></div> </div>   </details></div>
+firstdays        &#61; stats_subset&#40;views_per_video, money_per_view, is_firstdays&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 5732.5)</code></pre> </div></p>
+<div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>notviral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 25, views = 1152.77, money = 4420.27)</code></pre> </div>
+<p><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>firstdays</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 15, views = 954.394, money = 3228.55)</code></pre> </div></div> </div>   </details></div>
 <p>      </div>
     </div>
   </div>
@@ -2341,8 +2341,8 @@ temp       &#61; @view new_views&#91;new_views .≥ viral_threshold&#93;
 temp      .&#61; 1.2 .* temp
 
 allvideos      &#61; trues&#40;length&#40;new_views&#41;&#41;
-targetViral    &#61; stats_subset&#40;new_views, money_per_video, allvideos&#41;</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">(nrvideos = 30, views = 2647.11, money = 2.90408e6)</code></pre> </div></div> </div> 
+targetViral    &#61; stats_subset&#40;new_views, money_per_view, allvideos&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">(nrvideos = 30, views = 2647.11, money = 11299.3)</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia"># &#39;temp&#39; modifies &#39;new_views&#39;
 new_views  &#61; copy&#40;views_per_video&#41;
@@ -2350,8 +2350,8 @@ temp       &#61; @view new_views&#91;new_views .&lt; viral_threshold&#93;
 temp      .&#61; 1.2 .* temp
 
 allvideos      &#61; trues&#40;length&#40;new_views&#41;&#41;
-targetNonViral &#61; stats_subset&#40;new_views, money_per_video, allvideos&#41;</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">(nrvideos = 30, views = 2628.61, money = 2.50033e6)</code></pre> </div></div> </div> 
+targetNonViral &#61; stats_subset&#40;new_views, money_per_view, allvideos&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">(nrvideos = 30, views = 2628.61, money = 11036.8)</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>Note that updating <code>temp</code> requires performing the operation in place through <code>.&#61;</code>, as we aim at mutating the parent object. Below, we show what occurs if we don&#39;t use <code>.&#61;</code>, along with another misuse of views. </p>
@@ -2423,7 +2423,7 @@ end</code></pre> </div></div>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6e_useful_funs" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 15, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
