--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -2312,8 +2312,8 @@ notviral         &#61; stats_subset&#40;views_per_video, money_per_view, is_notv
 
 # videos created in specific days
 days_to_consider &#61; &#40;1, 10, 25&#41;
-is_firstdays     &#61; in.&#40;eachindex&#40;views_per_video&#41;, Ref&#40;days_to_consider&#41;&#41;
-firstdays        &#61; stats_subset&#40;views_per_video, money_per_view, is_firstdays&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 5732.5)</code></pre> </div></p>
+is_day           &#61; in.&#40;eachindex&#40;views_per_video&#41;, Ref&#40;days_to_consider&#41;&#41;
+specific_days    &#61; stats_subset&#40;views_per_video, money_per_view, is_firstdays&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>viral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 5, views = 1245.28, money = 5732.5)</code></pre> </div></p>
 <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>notviral</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 25, views = 1152.77, money = 4420.27)</code></pre> </div>
 <p><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>firstdays</code> <br/> <pre><code class="plaintext code-output">(nrvideos = 3, views = 158.069, money = 692.041)</code></pre> </div></div> </div>   </details></div>
 <p>      </div>
