--- a/PAGES/8b3_reductions/index.html
+++ b/PAGES/8b3_reductions/index.html
@@ -1987,6 +1987,9 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
+ <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
+      <b>Remark</b> </span>  </div>  <div class=content>     The script in this post is available <a href="/julia_book/assets/PAGES/8b3_reductions/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. It&#39;s been tested under <code>Julia 1.9.3</code>.<br/><br/> For more accurate benchmarks, each variable is wrapped in <code>ref&#40;x&#41; &#61; &#40;Ref&#40;x&#41;&#41;&#91;&#93;</code> and interpolated through <code>&#36;</code>.  </div>  </div>
 <section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
@@ -2094,7 +2097,7 @@ end
       <div class="col-lg- mx-auto">
         <h2>Reductions via Functions</h2></p>
 <p>The previous examples shown that reductions require writing a for-loop explicitly. While this allows for several optimizations, it can be cumbersome to write and read. Considering this, Julia provides several functions that implement reductions for you. </p>
-<p>The most flexible functions are <code>reduce</code> and <code>reducemap</code>. The difference between them is that latter allows the user to transform <code>x</code> by applying the function <code>map</code> that we studied <a href="/julia_book/PAGES/4d_vectorizing/#map_function">here</a>. However, the most common reductions have their own implementations as a method of the original function. Furthermore, these methods are specialized for the reduction performed, making them more efficient. For instance, we can implement a summation reduction by using <code>sum</code>, by using the method <code>sum&#40;&lt;foo&gt;, x&#41;</code> for a vector <code>x</code> and a function <code>foo</code> transforming <code>x</code>. </p>
+<p>The most flexible functions are <code>reduce</code> and <code>reducemap</code>. The difference between them is that latter allows the user to transform <code>x</code> by applying the function <code>map</code> that we studied <a href="/julia_book/PAGES/4d_vectorizing/#map_function">here</a>. However, the most common reductions have their own implementations as a method of the original function. Furthermore, these methods are specialized for the reduction performed, making them more efficient. For instance, we can implement a summation reduction by using <code>sum</code>, by using the method <code>sum&#40;foo, x&#41;</code> for a vector <code>x</code> and a function <code>foo</code> transforming <code>x</code>. </p>
 <p>The following example illustrates the syntax for a transformation of <code>x</code> given by <code>2 .* x</code>, which we then reduce by taking the sum, maximum, or product. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2174,7 +2177,7 @@ foo&#40;x,y&#41; &#61; prod&#40;a -&gt; a&#91;1&#93; * a&#91;2&#93;, zip&#40;x,y
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8c_staticVectors" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 15, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 20, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
