--- a/links/index.html
+++ b/links/index.html
@@ -1932,11 +1932,11 @@ section{
 </li>
 <li><p><a href="https://phind.com/">phind.com</a>: Search engine specialized for coding. It uses GPT-4 and has access to the internet. </p>
 </li>
-<li><p><a href="https://codeium.com/">Codeium</a>: Extension for VS Code. It&#39;s similar to GitHub Copilot, but free &#40;GitHub Copilot is free for students and professors&#41;.</p>
+<li><p><a href="https://codeium.com/">Codeium</a>: Extension for VS Code. It&#39;s a free alternative to GitHub Copilot &#40;GitHub Copilot is also free for students and professors&#41;.</p>
 </li>
-<li><p><a href="https://huggingface.co/chat/">Hugging Face Chat</a>: It showcases several open-source chatbots, including CodeLlama-34b It&#39;s still in beta.</p>
+<li><p><a href="https://huggingface.co/chat/">Hugging Face Chat</a>: It showcases several open-source chatbots, including CodeLlama-34b. </p>
 </li>
-<li><p><a href="https://chat.deepseek.com/coder">DeepSeek</a>: It includes a chatbot specialized in coding, referred to as DeepSeek Code </p>
+<li><p><a href="https://chat.deepseek.com/coder">DeepSeek</a>: It includes a chatbot specialized in coding, referred to as DeepSeek Coder. </p>
 </li>
 </ul>
 <p> <div style="visibility:hidden; margin-bottom:-1em;"> ======================================================================================================================================== </div>       </div>
