--- a/PAGES/4d_vectorizing/index.html
+++ b/PAGES/4d_vectorizing/index.html
@@ -2180,8 +2180,8 @@ x &#61; &#91;1,2,3&#93;</code></pre>
  9</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Broadcasting is not restricted to functions with single arguments—it&#39;s possible to broadcast a function with multiple arguments. This means that, given vectors <code>x</code> and <code>y</code>, the broadcasting version <code>f.&#40;x,y&#41;</code> applies <code>f</code> element-wise for each pair of elements from <code>&#40;x,y&#41;</code>. Formally, <code>f.&#40;x,y&#41;</code> computes <code>f&#40;x&#91;i&#93;,y&#91;i&#93;&#41;</code> for every possible index <code>i</code>, which is equivalent to <code>&#91;f&#40;x&#91;1&#93;,y&#91;1&#93;&#41;, f&#40;x&#91;2&#93;,y&#91;2&#93;&#41;, ...&#93;</code>.</p>
-<p>To illustrate this use, we refer to the function <code>max</code>, which returns the maximum of two numbers &#40;e.g., <code>max&#40;1,2&#41;</code> returns <code>2</code>&#41;.</p>
+<p>Broadcasting isn&#39;t restricted only to functions with single arguments—it&#39;s possible to broadcast a function with multiple arguments. This means that, given vectors <code>x</code> and <code>y</code>, <code>f.&#40;x,y&#41;</code> applies <code>f</code> element-wise for each pair of elements from <code>&#40;x,y&#41;</code>. Formally, <code>f.&#40;x,y&#41;</code> computes <code>f&#40;x&#91;i&#93;,y&#91;i&#93;&#41;</code> for every possible index <code>i</code>, which is equivalent to <code>&#91;f&#40;x&#91;1&#93;,y&#91;1&#93;&#41;, f&#40;x&#91;2&#93;,y&#91;2&#93;&#41;, ...&#93;</code>.</p>
+<p>To illustrate this usage, we refer to the function <code>max</code>, which returns the maximum of two numbers &#40;e.g., <code>max&#40;1,2&#41;</code> returns <code>2</code>&#41;.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2629,7 +2629,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\5a_logical" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified December 11, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified December 12, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
