--- a/PAGES/6c1_tuples_and_namedtuples/index.html
+++ b/PAGES/6c1_tuples_and_namedtuples/index.html
@@ -2046,7 +2046,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Keys and Values</h2></p>
-<p>Before analyzing specific collections, let&#39;s introduce some terminology. We refer to the identifiers of a collection&#39;s elements as   <span style="color: rgb(62, 121, 180);"><strong> keys</strong></span>, where key in turn has a   <span style="color: rgb(62, 121, 180);"><strong> value</strong></span> associated with it. For instance, the vector <code>x &#61; &#91;2,4,6&#93;</code> has the indices <code>1,2,3</code> as its keys, and their corresponding values are <code>2,4,6</code>.</p>
+<p>Before analyzing specific collections, let&#39;s introduce some terminology. We refer to the identifiers of a collection&#39;s elements as   <span style="color: rgb(62, 121, 180);"><strong> keys</strong></span>, where each key in turn has a   <span style="color: rgb(62, 121, 180);"><strong> value</strong></span> associated with it. For instance, the vector <code>x &#61; &#91;2,4,6&#93;</code> has the indices <code>1,2,3</code> as its keys, and their corresponding values are <code>2,4,6</code>.</p>
 <p>Although we&#39;ll frequently refer to keys and indices interchangeably, <strong> keys</strong> are a more general concept—they encompass all the possible identifiers of a collection&#39;s elements, including strings and a special type called <code>Symbol</code>. Given this generality, Julia offers the functions <code>keys</code> and <code>values</code> to identify the indices and values of a collection. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The function <code>keys</code> is equivalent to <code>eachindex</code>, with the only difference that <code>eachindex</code> is optimized for iterating purposes.  </span></span> Note that <code>keys</code> returns an iterator &#40;i.e., an object with a form similar to ranges&#41;, thereby requiring the function <code>collect</code> to define them as a vector. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2079,7 +2079,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>The Type Symbol</h2></p>
-<p>Keys of a collection can be represented through different data types, depending on the object considered. In the case of vectors and tuples, the keys are represented through numbers exclusively. However, other collections use the type <code>Symbol</code> as a common way to represent keys. This type is particularly useful for an efficient representation of string keys, along with the creation of variables programmatically.</p>
+<p>Keys of a collection can be represented through different data types, depending on the object considered. In the case of vectors and tuples, the keys are represented through numbers exclusively. However, other collections use a type known as <code>Symbol</code>. This is particularly useful for an efficient representation of string keys, along with the creation of variables programmatically.</p>
 <p>The symbol <code>x</code> is denoted by the syntax <code>:x</code>. Moreover, symbols can be constructed through strings by the function <code>Symbol&#40;&lt;some string&gt;&#41;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2632,7 +2632,7 @@ end</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6f_pipes" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified December 11, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified December 12, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
