--- a/PAGES/6f_pipes/index.html
+++ b/PAGES/6f_pipes/index.html
@@ -2035,8 +2035,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We present various ways to compute outputs that require multiple intermediate steps. First, we introduce the so-called   <span style="color: rgb(62, 121, 180);"><strong> let blocks</strong></span>, which creates a new scope and returns the last line as the output. It can be considered a simplified way to write and execute a function. All the variables in a let scope are local, and therefore inaccessible outside the scope. This is useful to keep the namespace clean. </p>
-<p>The second approach is the use of   <span style="color: rgb(62, 121, 180);"><strong> pipes</strong></span>, which chain together a series of operations and provide the final output as their result. The built-in implementation of pipes can be quite verbose when the operation doesn&#39;t consist of a single-argument function. Considering this, we also introduce an alternative implementation from the <code>Pipe</code> package.</p>
+<p>We introduce two approaches for computing outputs that involve multiple intermediate steps. First, we introduce the so-called   <span style="color: rgb(62, 121, 180);"><strong> let blocks</strong></span>, which create a new scope and return the last line as the output. Let blocks can be deemed a simplified way to write and execute a function. It also helps keep the namespace clean, as all the variables in a let scope are local, and therefore inaccessible outside it. </p>
+<p>The second approach is based on   <span style="color: rgb(62, 121, 180);"><strong> pipes</strong></span>, which chain together a series of operations and provide the final output as their result. The built-in implementation of pipes can become verbose beyond a single-argument function, we also present an alternative implementation from the <code>Pipe</code> package.</p>
 <p>      </div>
     </div>
   </div>
@@ -2273,7 +2273,7 @@ end</code></pre> </div></div>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6d_application01" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified December 11, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified December 12, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
