--- a/PAGES/1c_vscode/index.html
+++ b/PAGES/1c_vscode/index.html
@@ -2034,7 +2034,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Features and Keyboard Shortcuts</h2></p>
-<p>We present several handy features and keyboard shortcuts for <a href="https://code.visualstudio.com/">VS Code</a>. For each, you can click on &quot;Example&quot; and see a gif visually illustrating its application. Notably, several of these features can be used regardless of the programming language.</p>
+<p>We present several handy features and keyboard shortcuts for <a href="https://code.visualstudio.com/">VS Code</a>. To see a visual illustration of each, click on &quot;Example&quot;. Notably, several of these features can be used regardless of the programming language you&#39;re running.</p>
 <div class="vscode_bullets"><p> <h4> To run a script </h4>  Select the script to be executed and press  <kbd> Ctrl+Enter</kbd>  <div class="gif_drop"> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;" src="/julia_book/assets/PAGES/1c_vscode/pics/ex09.gif"/>
     </p></details></div> </p>
@@ -2082,7 +2082,7 @@ color: white;
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\2b_tips" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified December 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 11, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
