--- a/PAGES/3c_arrays/index.html
+++ b/PAGES/3c_arrays/index.html
@@ -2035,10 +2035,10 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>So far, we&#39;ve explored numbers and strings, which can be understood as single-element objects. Now, we&#39;ll shift our focus to   <span style="color: rgb(62, 121, 180);"><strong> collections</strong></span>, defined as <strong> variables comprising multiple elements</strong>.</p>
-<p>Julia has several types of collections, including:</p>
+<p>So far, we&#39;ve explored numeric and string variables, which can be interpreted as single-element objects. Now, we&#39;ll shift our focus to   <span style="color: rgb(62, 121, 180);"><strong> collections</strong></span>, defined as <strong> variables comprising multiple elements</strong>.</p>
+<p>Julia provides several forms of collections, including:</p>
 <ul>
-<li><p>Arrays &#40;which include vectors and matrices&#41;</p>
+<li><p>Arrays &#40;including vectors and matrices&#41;</p>
 </li>
 <li><p>Tuples and Named Tuples</p>
 </li>
@@ -2048,7 +2048,7 @@ color: white;
 </li>
 </ul>
 <p>  <span style="color: rgb(62, 121, 180);"><strong> Arrays</strong></span> represent one of the most common data structure for collections. They are formally defined as objects with type <code>Array&#123;T,d&#125;</code>, where <code>d</code> is the array&#39;s dimension and <code>T</code> is its elements&#39; type &#40;e.g., <code>Int64</code> or <code>Float64</code>&#41;.</p>
-<p>Two special types of arrays are   <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and   <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. We include a section about matrices, although this is optional—the website almost exclusively concentrates on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
+<p>Two special types of arrays are   <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and   <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. Although we include a section about matrices, this is optional—our content concentrates almost exclusively on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content> <strong> Julia uses 1 as an array's first index</strong>. This contrasts with many other languages &#40;e.g., Python&#41;, where 0 is used as the first index.  </div>  </div>
@@ -2073,22 +2073,22 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
  3</div> </div></div> </div>   </details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     Arrays can hold elements of various types, such as numbers and strings. For example, <code>x &#61; &#91;1, 2.5, &quot;Hello&quot;&#93;</code> is a valid vector, and Julia identifies it as having elements of type <code>Any</code> &#40;recall that <code>Any</code> encompasses all the possible types supported by Julia&#41;. However, arrays mixing types are highly discouraged for several reasons, including performance.  </div>  </div>
+      <b>Remark</b> </span>  </div>  <div class=content>     Arrays can hold elements of various types, such as numbers and strings. For example, <code>&#91;1, 2.5, &quot;Hello&quot;&#93;</code> is a valid vector in Julia, identifying its elements as having type <code>Any</code> &#40;recall that <code>Any</code> encompasses all the possible types supported by Julia&#41;. While arrays mixing types can be created, they&#39;re highly discouraged for several reasons, including performance.  </div>  </div>
  <h4> Accessing a Vector&#39;s Elements </h4>
-<p>Given a vector <code>x</code>, we can access its  <em> i</em>-th element by <code>x&#91;i&#93;</code>. Furthermore, all its elements are denoted by <code>x&#91;:&#93;</code>.</p>
+<p>Given a vector <code>x</code>, we can access its  <em> i</em>-th element through the syntax <code>x&#91;i&#93;</code>. Additionally, we can access all the elements of <code>x</code> through the syntax <code>x&#91;:&#93;</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4, 5, 6&#93;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;2&#93;</code><br/><div class="akin_to_pre">5</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;:&#93;</code><br/><div class="akin_to_pre">3-element Vector{Int64}:
  4
  5
  6</div> </div></div> </div>   </details></div>
-<p>There are multiple approaches for accessing a subset of elements. Next, we&#39;ll present two basic ways to do it.  The simplest one is <strong> through a vector</strong>, where the syntax is <code>x&#91;&lt;vector&gt;&#93;</code>.</p>
+<p>It&#39;s also possible to access a subset of elements. The approaches to doing this are multiple, and next we&#39;ll present two basic ways to do it.  The simplest method is by establishing the indices <strong> through a vector</strong>, whose syntax is <code>x&#91;&lt;vector&gt;&#93;</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;&#91;1,3&#93;&#93;</code> # elements of &#39;x&#39; with indices 1 and 3<br/><div class="akin_to_pre">2-element Vector{Int64}:
  4
  6</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;1,3&#93;</code> # be careful&#33; this is the notation used for matrices, indicating &#39;x&#91;row 1, column 3&#93;&#39;<br/><div class="akin_to_pre">ERROR: BoundsError: attempt to access 5-element Vector{Int64} at index [1, 3]</div> </div></div> </div>   </details></div>
-<p>The second approach is through a <strong> range</strong>. Its syntax is <code>&lt;first&gt;:&lt;steps&gt;:&lt;last&gt;</code>, where Julia assumes increments of 1 by default if we omit <code>&lt;steps&gt;</code>. To indicate the first and last index into a range, we can use the keywords <code>begin</code> and <code>end</code>, respectively.</p>
+<p>The second approach is by establishing the indices through a <strong> range</strong>. Ranges are denoted as <code>&lt;first&gt;:&lt;steps&gt;:&lt;last&gt;</code>, with Julia assuming increments of one if we omit <code>&lt;steps&gt;</code>. The first and last index in a range can be expressed respectively through the keywords <code>begin</code> and <code>end</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;1:2&#93;</code>       # steps with unit increments &#40;assumed by default&#41;<br/><div class="akin_to_pre">2-element Vector{Int64}:
@@ -2113,7 +2113,8 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Matrices (<strong><i>OPTIONAL</i></strong>)</h2></p>
-<p><strong> Matrices</strong> can be defined by specifying either row- or column-vectors. If we write them by using row vectors, each row is separated by a semicolon <code>;</code>. If instead we use column vectors, their elements are separated by a space. Row vectors in particular are considered as special cases of matrices, with their elements separated by a space—they&#39;re matrices with multiple columns having one element. </p>
+<p><strong> Matrices</strong> can be defined as collections of row- or column-vectors. If they&#39;re created through multiple row vectors, each row has to be separated by a semicolon <code>;</code>. If we instead adopt multiple column vectors, their elements need to be separated by a space. </p>
+<p>Note that row vectors are considered as special cases of matrices, with their elements separated by a space—they&#39;re matrices with multiple columns having one element. </p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">X &#61; &#91;1 2 ; 3 4&#93;       #&#61; matrix as a collection of row-vectors, separated by semicolons
                          Matrix&#123;Int64&#125; &#40;alias for Array&#123;Int64, 2&#125;&#41;&#61;#
@@ -2139,7 +2140,7 @@ Y &#61; &#91;4 5 6&#93;     # row-vector</code></pre>
  6</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>X&#91;:,2&#93;</code><br/><div class="akin_to_pre">2-element Vector{Int64}:
  6
  8</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>Y&#91;2&#93;</code><br/><div class="akin_to_pre">5</div> </div><br/></div> </div>   </details></div>
-<p>For accessing a subset of elements, we can use the same approaches as for vectors applied to either rows or columns.</p>
+<p>Accessing a subset of elements is possible through the same approaches as for vectors, now applied to either rows or columns.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">X &#61; &#91;5 6 ; 7 8&#93;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>X</code><br/><div class="akin_to_pre">2×2 Matrix{Int64}:
@@ -2163,7 +2164,7 @@ Y &#61; &#91;4 5 6&#93;     # row-vector</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3c2_tuples" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified December 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 11, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
