--- a/PAGES/6c1_tuples_and_namedtuples/index.html
+++ b/PAGES/6c1_tuples_and_namedtuples/index.html
@@ -2035,8 +2035,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Thus far, we&#39;ve focused on vectors and tuples for the analysis of collections. The coverage of tuples in particular was brief, and primarily introduced for returning outputs in functions. However, this only scratched the surface of their capabilities.</p>
-<p>The current section expands on the use of collections by introducing two new types: <strong> named tuples</strong> and <strong> dictionaries</strong>. We additionally delve deeper into the use of tuples, along with how to construct and manipulate collections.</p>
+<p>Thus far, the collections presented were focusing on vectors and tuples. The coverage of tuples in particular was brief, as we introduce them primarily to return multiple outputs in functions.</p>
+<p>The current section expands on the use of collections, proving a more comprehensive analysis of how they can be constructed. With this goal, we provide general properties of collections, methods to manipulate them, and ways to transform one collection into another. The section also introduces two new types of collections: <strong> named tuples</strong> and <strong> dictionaries</strong>.</p>
 <p>      </div>
     </div>
   </div>
@@ -2046,8 +2046,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Keys and Values</h2></p>
-<p>Before analyzing specific collections, let&#39;s introduce some terminology. We refer to the identifiers of a collection&#39;s elements as   <span style="color: rgb(62, 121, 180);"><strong> keys</strong></span>, where each key in turn has a   <span style="color: rgb(62, 121, 180);"><strong> value</strong></span> associated with it. For instance, the vector <code>x &#61; &#91;2,4,6&#93;</code> has the indices <code>1,2,3</code> as its keys, and their corresponding values are <code>2,4,6</code>.</p>
-<p>Although we&#39;ll frequently refer to keys and indices interchangeably, <strong> keys</strong> are a more general concept—they encompass all the possible identifiers of a collection&#39;s elements, including strings and a special type called <code>Symbol</code>. Given this generality, Julia offers the functions <code>keys</code> and <code>values</code> to identify the indices and values of a collection. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The function <code>keys</code> is equivalent to <code>eachindex</code>, with the only difference that <code>eachindex</code> is optimized for iterating purposes.  </span></span> Note that <code>keys</code> returns an iterator &#40;i.e., an object with a form similar to ranges&#41;, thereby requiring the function <code>collect</code> to define them as a vector. </p>
+<p>Any collection comprises   <span style="color: rgb(62, 121, 180);"><strong> keys</strong></span> that act as identifiers of a collection&#39;s elements, where each key in turn has a   <span style="color: rgb(62, 121, 180);"><strong> value</strong></span> associated with it. For instance, the vector <code>x &#61; &#91;2,4,6&#93;</code> has the indices <code>1,2,3</code> as its keys, and their corresponding values are <code>2,4,6</code>.</p>
+<p>Throughout the website, we&#39;ll frequently refer to keys and indices interchangeably. However, <strong> keys</strong> are a more general concept—they encompass all the possible identifiers of a collection&#39;s elements. Thus, they comprise other possibilities in addition to indices, which are numerical identifiers. For instance, keys can be defined through strings, and in particular through a special type called <code>Symbol</code>. </p>
+<p>Given the different possibilities for defining the indices and values of a collection, Julia offers the functions <code>keys</code> and <code>values</code> to identify them. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The function <code>keys</code> is equivalent to <code>eachindex</code>, with the only difference that <code>eachindex</code> is optimized for iterating purposes.  </span></span> Note that <code>keys</code> returns an iterator &#40;i.e., an object with a form similar to ranges&#41;, thereby requiring the function <code>collect</code> to define them as a vector. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2079,7 +2080,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>The Type Symbol</h2></p>
-<p>Keys of a collection can be represented through different data types, depending on the object considered. In the case of vectors and tuples, the keys are represented through numbers exclusively. However, other collections use a type known as <code>Symbol</code>. This is particularly useful for an efficient representation of string keys, along with the creation of variables programmatically.</p>
+<p>Keys of a collection can be represented through different data types, depending on the object considered. In the case of vectors and tuples, the keys are represented through numbers exclusively. In this context, we refer the keys are defined through the indices. However, some collections use a type known as <code>Symbol</code>, which constitutes an efficient representation of string keys that additionally allows creating variables programmatically.</p>
 <p>The symbol <code>x</code> is denoted by the syntax <code>:x</code>. Moreover, symbols can be constructed through strings by the function <code>Symbol&#40;&lt;some string&gt;&#41;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2107,14 +2108,14 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Named Tuples</h2></p>
-<p>Named tuples share several similarities with regular tuples, including their <strong> immutability</strong>. Their major difference lies in how they access elements: <strong> traditional tuples use numerical indices, while named tuples employ symbols.</strong>. </p>
+<p>Named tuples share several similarities with regular tuples, including their <strong> immutability</strong>. The primary difference between them lies in how they access elements: <strong> regular tuples use numerical indices, while named tuples employ symbols.</strong>. </p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content> <strong> Tuples and named tuples are only suitable for small collections</strong>. Using them for large collections can lead to slow operations or even stack overflows, exceeding the computer&#39;s processing capacity. For such situations, arrays remain preferable. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Tuples are allocated in a part of the RAM known as the stack, which has a limited capacity. Instead, vectors are allocated in another part of the RAM, known as the heap, capable of handling much larger collections.  </span></span></p>
 <p>Defining  <em> small</em> in this context remains challenging and, unfortunately, there are no definitive answers in this regard. We can only claim that collections with less than 10 elements are undoubtedly small, while those exceeding hundreds of elements clearly violate the definition.  </div>  </div>
-<p>Named tuples differ syntactically from tuples in several ways. First, they always need to be enclosed in parentheses <code>&#40;&#41;</code>—omitting them is not possible, as is the case with regular tuples. Furthermore, the elements of a named tuple can be specified by either <code>a &#61; 10</code> or <code>:a &#61;&gt; 10</code>. The notation <code>&#61;&gt;</code> in Julia <strong> denotes pairs of key-values</strong>, and formally defines an object with type <code>Pairs</code>. </p>
-<p>Second, the syntax for defining a named tuple with a single element requires adding a comma <code>,</code> after the element &#40;as occurs with tuples&#41;, but also accepts adding a semicolon <code>;</code> before the element. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The semicolon notation <code>;</code> may seem strange, but it follows naturally from how keyword arguments are incorporated into functions.  </span></span> </p>
-<p>Finally, the method for accessing their elements is twofold: given a named tuple <code>nt</code>, you can write either <code>nt&#91;:a&#93;</code> or <code>nt.a</code> to access its element <code>a</code>.</p>
+<p>Named tuples differ syntactically from tuples in several ways. First, they always need to be enclosed in parentheses <code>&#40;&#41;</code>—omitting them is not possible, as is the case with regular tuples. Also, a named tuple&#39;s elements can be specified by either <code>&#61;</code> or <code>&#61;&gt;</code>. For instance, you can define the element with key <code>a</code> by <code>a &#61; 10</code> or <code>:a &#61;&gt; 10</code>. The notation <code>&#61;&gt;</code> in Julia is used for <strong> pairs of key-values</strong>, and it formally defines an object with type <code>Pairs</code>. </p>
+<p>Second, defining a named tuple with a single element requires adding a comma <code>,</code> after the element &#40;as occurs with tuples&#41;. However, it  also accepts adding a semicolon <code>;</code> before the element. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The semicolon notation <code>;</code> may seem strange, but it follows naturally from how keyword arguments are incorporated into functions.  </span></span> </p>
+<p>Finally, the method for accessing their elements is twofold: accessing the element <code>a</code> of a named tuple <code>nt</code> can be done through either <code>nt&#91;:a&#93;</code> or <code>nt.a</code> </p>
 <p>The following code snippet illustrates all this. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2155,8 +2156,7 @@ nt &#61; &#40;; :a &#61;&gt; 10 &#41;
  :a
  :b</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>values&#40;nt&#41;</code><br/><div class="akin_to_pre">(10, 20)</div> </div></div> </div>   </details></div>  </div>  </div>
  <h4> Distinction Between The Creation Of Tuples and Named Tuples </h4>
-<p>You can create named tuples from existing variables, where each key and value is inherited from the variable. For instance, if you have variables <code>x &#61; 10</code> and <code>y &#61; 20</code>, you can create a named tuple <code>nt</code> where the keys are <code>:x</code> and <code>:y</code>, and their values <code>10</code> and <code>20</code>. </p>
-<p>The notation for creating such a named tuple is <code>nt &#61; &#40;; x, y&#41;</code>. Note that you need <code>;</code> to be interpreted as a named tuple, as <code>&#40;x,y&#41;</code> would create a regular tuple otherwise. </p>
+<p>You can create named tuples from existing variables, where each key and value is inherited from the variable itself. For instance, given variables <code>x &#61; 10</code> and <code>y &#61; 20</code>, you can create a named tuple <code>nt</code> with the key <code>:x</code> returning <code>10</code> and the key <code>:y</code> returning <code>20</code>. This is accomplished by <code>nt &#61; &#40;; x, y&#41;</code>. Note that you need <code>;</code> to be interpreted as a named tuple, as <code>&#40;x,y&#41;</code> would create a regular tuple otherwise. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2191,16 +2191,16 @@ tup &#61; &#40;x, &#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Dictionaries</h2></p>
-<p>Dictionaries are collections consisting of key-value pairs. They exhibit three distinctive features:</p>
+<p>Dictionaries are collections consisting of key-value pairs, exhibiting three distinctive features:</p>
 <div class="itemNoSpace"><ul>
-<li><p><strong> The keys of dictionaries can be any object</strong>: this includes strings, numbers, or other objects &#40;e.g., vectors, tuples&#41;. </p>
+<li><p><strong> The keys of dictionaries can be any object</strong>: strings, numbers, or other objects &#40;e.g., vectors, tuples&#41; are all possible. </p>
 </li>
 <li><p><strong> Dictionaries are mutable</strong>: you can modify, add, and remove elements. </p>
 </li>
-<li><p><strong> Dictionaries are unordered</strong>: the keys don&#39;t have any order attached.</p>
+<li><p><strong> Dictionaries are unordered</strong>: keys don&#39;t have any order attached.</p>
 </li>
 </ul></div>
-<p>Dictionaries are created through the function <code>Dict</code>. The arguments of this function denote key-value pairs, expressed through the notation <code>&lt;key&gt; &#61;&gt; &lt;value&gt;</code>.</p>
+<p>Dictionaries are created through the function <code>Dict</code>, with each argument denoting key-value pairs through the notation <code>&lt;key&gt; &#61;&gt; &lt;value&gt;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2230,7 +2230,7 @@ tup &#61; &#40;x, &#41;</code></pre>
   (1, 1) => 10</code></pre> </div><br/> <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>dict&#91;&#40;1,1&#41;&#93;</code> <br/> <pre><code class="plaintext code-output">10</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>As dictionaries are unordered objects, the access to their elements doesn&#39;t follow any pattern. The following example illustrates this, where a vector collects the keys of a dictionary.</p>
+<p>As dictionaries are unordered, accessing their elements doesn&#39;t follow any pattern. The following example illustrates this, where a vector collects the keys of a dictionary.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2277,7 +2277,7 @@ keys_from_dict &#61; collect&#40;keys&#40;dict&#41;&#41;</code></pre> </div></di
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Creating Named Tuples and Dictionaries</h2></p>
-<p>Both dictionaries and named tuples can be constructed from other collections. This is possible as long as the source collection possesses a key-value structure. In the following, we show how several collections are employed to create <strong> dictionaries</strong> in particular. </p>
+<p>Both dictionaries and named tuples can be constructed using other collections as their source. This is feasible as long as the source collection possesses a key-value structure. In the following, we show how several collections are employed to create <strong> dictionaries</strong> in particular. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2395,7 +2395,7 @@ nt &#61; NamedTuple&#40;vector_keys_values&#41;</code></pre> </div></div>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Destructuring (<strong><i>OPTIONAL</i></strong>)</h2></p>
-<p>Previously, we&#39;ve demonstrated how to create a named tuple <code>nt</code> using variables as its source. his approach automatically defines the key-value pairs of the named tuple by each variable&#39;s name and value.</p>
+<p>Previously, we&#39;ve demonstrated how to create a named tuple <code>nt</code> using variables as its source. This approach automatically defines the key-value pairs of the named tuple by each variable&#39;s name and value.</p>
 <p>Next, we show that we are also able to perform the opposite operation: <strong> extracting values from a named tuple and assigning them to individual variables</strong>. This process is known as   <span style="color: rgb(62, 121, 180);"><strong> destructuring</strong></span>, and allows users to &quot;unpack&quot; a collection&#39;s values into separate variables.</p>
 <p>To make the section self-contained, we start by reviewing destructuring for regular tuples. This will provide a foundational understanding before exploring destructuring named tuples. Both approaches enable the creation of variables with specific values, although they cater to distinct situations. </p>
  <h4> Destructuring Collections Through Tuples </h4>
@@ -2632,7 +2632,7 @@ end</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6f_pipes" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified December 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 11, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
