--- a/PAGES/6c_inplace/index.html
+++ b/PAGES/6c_inplace/index.html
@@ -2035,7 +2035,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section continues exploring <strong> approaches to mutating a vector</strong>. Specifically, we now focus on functions that mutate at least one of their arguments, known as <strong> in-place functions</strong>. The significance of these functions will become apparent when we examine their performance. Notably, several built-in functions in Julia have an in-place alternative. These functions store the output in the vector passed as argument, rather than creating a new object, which enhances computational speed.</p>
+<p>This section continues exploring <strong> approaches to mutating a vector</strong>. Specifically, we focus on functions that mutate at least one of their arguments, known as <strong> in-place functions</strong>. The significance of these functions will become apparent when we explore performance matters, as they avoid memory allocations.  </p>
+<p>Notably, several built-in functions in Julia have an in-place alternative. These functions store the output in the vector passed as argument, rather than creating a new object, which enhances computational speed.</p>
 <p>A common in-place function is one that wraps a for-loop with the goal of modifying the vector passed as an argument. Due to this reason, the section provides several examples based on this approach.</p>
 <p>      </div>
     </div>
@@ -2091,7 +2092,7 @@ end</code></pre>
  2</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>  </div>  </div>
-<p>The ability to mutate function arguments is a crucial aspect when it comes to for-loops. This is particularly true as for-loops should always be enclosed within functions. This is to prevent issues with variable scope and also performance reasons, as we discuss later on the website. </p>
+<p>The ability to mutate function arguments is a crucial aspect when it comes to for-loops. For-loops should always be enclosed within functions to prevent issues with variable scope and also for performance reasons, as we discuss later on the website. </p>
 <p>The code snippet below demonstrates that function arguments can be modified using a for-loop. Furthermore, we show a typical use case, where a vector is initialized and populated with values through a for-loop wrapped in an in-place function.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2291,7 +2292,7 @@ deleteat&#33;&#40;x, &#91;1,3&#93;&#41;     # &#91;1,3&#93; are the indices to b
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6c1_tuples_and_namedtuples" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified December 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 11, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
