--- a/PAGES/5a_logical/index.html
+++ b/PAGES/5a_logical/index.html
@@ -2035,7 +2035,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section lays the foundations for stating <strong> conditions</strong>, defined as functions and operators returning <code>true</code> or <code>false</code> as their output. An example is <code>x &gt; y</code>, which is a condition that returns <code>true</code> if <code>x</code> is greater than <code>y</code>, and <code>false</code> otherwise.</p>
+<p>This section lays the foundations for stating <strong> conditions</strong>, defined as functions and operators returning <code>true</code> or <code>false</code> as their output. An example of condition is <code>x &gt; y</code>, which returns <code>true</code> if <code>x</code> is greater than <code>y</code>, and <code>false</code> otherwise.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content>     For the syntax of this section, it&#39;s worth recalling the classification of operators introduced <a href="/julia_book/3a_variables/#operators">here</a>. Briefly, consider a generic operator <code>&lt;operator&gt;</code> and two <code>Bool</code> variables <code>x</code> and <code>y</code>. Then, a <strong> unary operator</strong> takes only one argument and is written at the left &#40;i.e., <code>&lt;operator&gt;x</code>&#41;, while a <strong> binary operator</strong> takes two arguments and is written in the middle &#40;i.e., <code>x &lt;operator&gt; y</code>&#41;.  </div>  </div>
@@ -2048,8 +2048,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Conditions</h2></p>
-<p>Formally,   <span style="color: rgb(62, 121, 180);"><strong> conditions</strong></span> are expressions with type <code>Bool</code> that evaluate to either <code>true</code> or <code>false</code>. They&#39;re internally represented as integers restricted to <code>1</code> and <code>0</code>, which are the values of <code>true</code> and <code>false</code> respectively.</p>
-<p>Julia prints <code>Bool</code> variables differently in the REPL, depending on whether they&#39;re a scalar or a vector. Specifically, Julia uses <code>true</code> and <code>false</code> for <code>Bool</code> scalars, and <code>1</code> and <code>0</code> for <code>Bool</code> vectors. Note that this only affects how the output is displayed, as the two approaches are actually equivalent. Below, we demonstrate each representation by using <code>&gt;</code> as an example.</p>
+<p>  <span style="color: rgb(62, 121, 180);"><strong> Conditions</strong></span> are represented as expressions with type <code>Bool</code>, evaluating to either <code>true</code> or <code>false</code>. They&#39;re internally represented as integers restricted to <code>1</code> and <code>0</code>. </p>
+<p>In the REPL, Julia displays <code>true</code> and <code>false</code> for <code>Bool</code> scalars, and <code>1</code> and <code>0</code> for <code>Bool</code> vectors. Note that the output displayed is different, but the two approaches are actually equivalent. Below, we demonstrate each representation by using <code>&gt;</code> as an example.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
