--- a/PAGES/3b_univariables/index.html
+++ b/PAGES/3b_univariables/index.html
@@ -2035,7 +2035,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The previous section introduced the concept of variables, distinguishing between those containing a single element and those acting as collections &#40;i.e., variables containing multiple elements, such as vectors and matrices&#41;. This section exclusively focuses on single-element variables containing a number. </p>
+<p>The previous section introduced the concept of variables, distinguishing between those containing a single element and those acting as collections. This section exclusively focuses on single-element variables, and in particular on those containing a number. </p>
 <p>      </div>
     </div>
   </div>
@@ -2045,7 +2045,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
-<p>Computers use various representations for numbers, with integers and real numbers treated as different objects. Furthermore, several representations arise according to the level of precision aimed. These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
+<p>Computers use various representations for numbers, where integers and real numbers are treated as different objects. Furthermore, several representations arise according to the level of precision aimed. These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
 <p>The default types for numbers in Julia are:</p>
 <ul>
 <li><p><code>Int64</code> for integers.</p>
