--- a/PAGES/7b01_preliminaries_stability/index.html
+++ b/PAGES/7b01_preliminaries_stability/index.html
@@ -2033,10 +2033,10 @@ y::T where T&lt;:Number  &#61; 2     # or y::T where &#123;T &lt;: Number&#125; 
  <div class=" code_box"> <details  open><summary> Type Any  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">a                 &#61; 2
 b::Any            &#61; 2
-d::T where T      &#61; 2
-c::T where T&lt;:Any &#61; 2</code></pre>
+c::T where T      &#61; 2
+d::T where T&lt;:Any &#61; 2</code></pre>
 <p></div> </div>  </details></div>
-<p>Note in particular the notation for <code>d</code>. This is equivalent to assuming <code>T &lt;: Any</code>, as we omitted specifying the type after <code>T</code>. </p>
+<p>Note in particular that <code>a</code> and <code>b</code> are equivalent. The same occurs for <code>c</code> and <code>d</code>, where <code>c</code> omits the type after <code>T</code> and so it&#39;s implicitly assumed <code>Any</code>.</p>
 <p>      </div>
     </div>
   </div>
@@ -2046,10 +2046,10 @@ c::T where T&lt;:Any &#61; 2</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Multiple Dispatch and Compilation</h2></p>
-<p>Running a function in Julia triggers two actions: <strong> dispatch and compilation</strong>. A brief explanation of these concepts will help us understand the definition of type stability, which is one of Julia&#39;s most basic feature for generating fast machine code.</p>
-<p> <h4> Multiple Dispatch </h4> The idea of multiple dispatch hinges on the distinction between a function and its methods. Essentially,   <span style="color: rgb(62, 121, 180);"><strong> a function</strong></span> is a name that groups different methods, with each   <span style="color: rgb(62, 121, 180);"><strong> method</strong></span> defining the behavior of the function for a specific argument type. For example, <code>sum</code> is defined as a function comprising 10 methods in Julia, where each method corresponds to a particular argument type. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> You can use the function <code>methods</code> to get the list of methods defined for a given function &#40;e.g., <code>methods&#40;sum&#41;</code>&#41;.  </span></span> This means that <code>sum&#40;x&#41;</code> has one method for <code>x</code> with type <code>Vector&#123;Int64&#125;</code>, another method for <code>x</code> with type <code>Vector&#123;Float64&#125;</code>, and 8 remaining for other types.</p>
-<p>When a function is called in Julia, it undergoes a process known as   <span style="color: rgb(62, 121, 180);"><strong> multiple dispatch</strong></span>. This involves exploring all the available methods for the function, eventually choosing the specific method for the types of the function arguments.</p>
-<p>To illustrate multiple dispatch, let&#39;s define a function <code>foo</code> and its corresponding methods. To define specific methods, you need to constrain the function arguments through the operator <code>::</code>. </p>
+<p>In Julia, running a function involves two essential steps: <strong> dispatch</strong> and <strong> compilation</strong>. Understanding these concepts will provide us with a clear definition of type stability, a fundamental feature in Julia for generating fast machine code. </p>
+<p> <h4> Multiple Dispatch </h4> The idea of multiple dispatch hinges on distinguishing between a function and its methods. Essentially,   <span style="color: rgb(62, 121, 180);"><strong> a function</strong></span> is a name that groups different methods, with each   <span style="color: rgb(62, 121, 180);"><strong> method</strong></span> defining the behavior of the function for a specific argument type. For example, <code>sum</code> is a function comprising 10 methods in Julia, where each method corresponds to a particular argument type. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> You can use the function <code>methods</code> to get the list of methods defined for a given function &#40;e.g., <code>methods&#40;sum&#41;</code>&#41;.  </span></span> This means that <code>sum&#40;x&#41;</code> has one method for <code>x</code> with type <code>Vector&#123;Int64&#125;</code>, another method for <code>x</code> with type <code>Vector&#123;Float64&#125;</code>, and 8 remaining methods for other types.</p>
+<p>When a function is called in Julia, it undergoes a process known as   <span style="color: rgb(62, 121, 180);"><strong> multiple dispatch</strong></span>. This involves exploring all the available methods for the function, eventually choosing the one corresponding to the function arguments&#39; types.</p>
+<p>To illustrate multiple dispatch, let&#39;s define a function <code>foo</code> and its methods. Constructing a new method requires constraining the function arguments through the operator <code>::</code>. </p>
  <div class=" code_box"> <details  open><summary> Methods  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">foo&#40;x::Int64&#41;  &#61; println&#40;x&#41;
 foo&#40;x::String&#41; &#61; println&#40;&quot;The Number &#36;x&quot;&#41;</code></pre>
@@ -2063,8 +2063,8 @@ foo&#40;x::String&#41; &#61; println&#40;&quot;The Number &#36;x&quot;&#41;</cod
 foo&#40;x::Float64, y::Float64&#41; &#61; x * y</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>foo&#40;2&#41;</code> <br/> 4 </div><br/> <div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>foo&#40;2. , 2.&#41;</code> # 2. is shorthand for 2.0 <br/> 4.0 </div></div> </div>   </details></div>  </div>  </div>
  <h4> Compilation </h4>
-<p>Multiple dispatch is the first action triggered when you call a function, which identifies an appropriate method for the types of the function arguments. After this, Julia engages in a process known as   <span style="color: rgb(62, 121, 180);"><strong> compilation</strong></span>, where the compiler creates machine code to implement a specialized version for the function, optimized for the specific argument types. </p>
-<p>The compiler can generate fast optimized code when it&#39;s capable of inferring the types of each variable and output in a function. In other words, the function has to be <strong> type stable</strong>, which is the focus in the upcoming sections.</p>
+<p>Multiple dispatch is the first action executed when you call a function. This identifies an appropriate method for the function arguments&#39; types. After this, Julia engages in a process known as   <span style="color: rgb(62, 121, 180);"><strong> compilation</strong></span>. This creates machine code to implement a specialized version of the function, optimized for the argument types used.</p>
+<p>To generate fast optimized code, the compiler has to be capable of inferring the types of each variable and output. When this occurs, we say the function is <strong> type stable</strong>, which is the focus in the upcoming sections.</p>
 <p>      </div>
     </div>
   </div>
